<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyclone_ros2_node</name>
  <version>1.0.0</version>
  <description>ROS 1.0 / 2.0 Message Bridge using CycloneDDS</description>
  <maintainer email="whgdms1230@naver.com">PaulKim</maintainer>
  <license>Apache 2.0</license>
  <author email="whgdms1230@naver.com">PaulKim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  
  <depend>rclcpp</depend>
  <depend>cyclone_bridge</depend>
  <depend>cyclone_ros2_msgs</depend>
  
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

